# The-ClojureScript-Playbook

./: LICENSE.txt  README.md
10-audio-visualizer-v2/10-audio-visualizer-v2/: .gitignore  README.md  deps.edn  package-lock.json  package.json  shadow-cljs.edn  tutorial.md
10-audio-visualizer-v2/10-audio-visualizer-v2/public/: index.html  styles.css
10-audio-visualizer-v2/10-audio-visualizer-v2/public/js/: manifest.edn
10-audio-visualizer-v2/10-audio-visualizer-v2/public/js/cljs-runtime/: cljs.core.async.impl.buffers.js  cljs.core.async.impl.channels.js  cljs.core.async.impl.channels.js.map  cljs.core.async.impl.dispatch.js  cljs.core.async.impl.ioc_helpers.js  cljs.core.async.impl.ioc_helpers.js.map  cljs.core.async.impl.protocols.js  cljs.core.async.impl.protocols.js.map  cljs.core.async.impl.timers.js  cljs.core.async.impl.timers.js.map  cljs.core.async.js  cljs.core.async.js.map  cljs.core.js  cljs.pprint.js  cljs.pprint.js.map  cljs.repl.js  cljs.repl.js.map  cljs.spec.alpha.js  cljs.spec.alpha.js.map  cljs.spec.gen.alpha.js  cljs.spec.gen.alpha.js.map  clojure.core.protocols.js  (+83 more)
10-audio-visualizer-v2/10-audio-visualizer-v2/src-tauri/: Cargo.toml  tauri.conf.json
10-audio-visualizer-v2/10-audio-visualizer-v2/src-tauri/capabilities/: migrated.json
10-audio-visualizer-v2/10-audio-visualizer-v2/src-tauri/icons/: icon.icns
10-audio-visualizer-v2/10-audio-visualizer-v2/src-tauri/src/: audio_loader.rs  main.rs
10-audio-visualizer-v2/10-audio-visualizer-v2/src/myapp/: core.cljs  e01.cljs  e02.cljs  e05.cljs  e06.cljs  e07.cljs  e08.cljs  state.cljs
